--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
       <h1>!!!! Xsolla New Year Random Gift Machine !!!!</h1>
-       <img src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif">
+       <!-- img src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif" -->
        <img src="https://i.ibb.co/WnmdQc4/IMG-7454.jpg">
        <br>
       <p>
