--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -13,8 +13,9 @@
       </p>
 
 
-
-
+      <p style="color:red;"><b>
+        {{ bad_context }}
+      </b></p>
       <form action="/" method="post">
         <h2>Выберете количество людей для награды</h2>
         <input type="number" id="cnt_employees" name="cnt_employees" required size="20">
