--- a/templates/employees/employee-detail.html
+++ b/templates/employees/employee-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<body>
+<body style="background-color:powderblue;">
     <h1>Оооо кто это у нас тут?</h1>
     <h2>{{ name }}</h2>
     <p>{{ city }}</p>
