--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -6,11 +6,8 @@
   <body style="background-color:powderblue;">
       <h1>!!!! Xsolla New Year Random Gift Machine !!!!</h1>
        <!-- img src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif" -->
-      <p>
-        {{ prev_winners | safe }}
-      </p>
-       <br>
-       <img src="https://i.ibb.co/WnmdQc4/IMG-7454.jpg">
+       <!-- img src="https://i.ibb.co/cXTdJMM/2020-12-24-14-57-37.png" -->
+       <img src="https://i.ibb.co/k30s1Ff/2020-12-24-14-59-34.png">
        <br>
 
 
@@ -23,6 +20,11 @@
       <p>
         {{ winners | safe }}
       </p>
+
+      <p>
+        {{ prev_winners | safe }}
+      </p>
+       <br>
 
 
       <form action="/" method="post">
