--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -28,7 +28,7 @@
 
 
       <form action="/" method="post">
-        <h2>Выберете количество людей для награды</h2>
+        <h2>Выберите количество счастливчиков</h2>
         <input type="number" id="cnt_employees" name="cnt_employees" required size="20">
         <br>
         <br>
