--- a/templates/employees/prev_winners.html
+++ b/templates/employees/prev_winners.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 </head>
-<body style="background-color:powderblue;">
+<body style="background-color:#f6faff;">
     <h1>Оооо кто это у нас тут?</h1>
     <img src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif">
 
