--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -3,8 +3,8 @@
   <head>
       <meta charset="UTF-8">
   </head>
-  <body style="background-color:powderblue;">
-      <h1>!!!! Xsolla New Year Random Gift Machine !!!!</h1>
+  <body style="background-color:#f6faff;">
+      <h1>Xsolla New Year Random Gift Machine</h1>
        <!-- img src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif" -->
        <!-- img src="https://i.ibb.co/cXTdJMM/2020-12-24-14-57-37.png" -->
        <img src="https://i.ibb.co/k30s1Ff/2020-12-24-14-59-34.png">
