--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -28,11 +28,11 @@
 
 
       <form action="/" method="post">
-        <h2>Выберите количество счастливчиков</h2>
+        <h2>Напиши количество счастливчиков</h2>
         <input type="number" id="cnt_employees" name="cnt_employees" required size="20">
         <br>
         <br>
-        <input type="submit" value="Запустить шарманку">
+        <input type="submit" value="Запусти машину">
       </form>
 
 
