--- a/templates/employees/prev_winners.html
+++ b/templates/employees/prev_winners.html
@@ -6,7 +6,7 @@
 <body style="background-color:#f6faff;">
     <h1>Оооо кто это у нас тут?</h1>
     <img src="https://media.giphy.com/media/y0NFayaBeiWEU/giphy.gif">
-
+    <h1>НАШИ СЧАСТЛИВЧИКИ:</h1>
       <p>
         {{ prev_winners | safe }}
       </p>
